# bug-tracker

./: LICENSE  db.sqlite3  pyproject.toml
bug_tracker/: settings.py  urls.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200829_0208.py  0002_auto_20200831_1449.py  0003_ticket_assigned_to.py
myuser/: admin.py
myuser/migrations/: 0001_initial.py
templates/: base.html  card.partial  index.html  table.partial  ticket_detail.html  user_detail.html
user/: admin.py
