[tool.poetry]
name = "bug-tracker"
version = "0.1.0"
description = "It tracks the bugs"
authors = ["Iris Hoffmeyer <hi@iris.best>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
django-crispy = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
